@@ -1,5 +1,6 @@
 package com.datastax.spark.connector.japi.rdd;
 
+import com.datastax.spark.connector.SelectableColumnRef;
 import com.datastax.spark.connector.cql.CassandraConnector;
 import com.datastax.spark.connector.japi.CassandraJavaUtil;
 import com.datastax.spark.connector.NamedColumnRef;
@@ -44,7 +45,7 @@ public class CassandraJavaPairRDD<K, V> extends JavaPairRDD<K, V> {
     public CassandraJavaPairRDD<K, V> select(String... columnNames) {
         // explicit type argument is intentional and required here
         //noinspection RedundantTypeArguments
-        CassandraRDD<Tuple2<K, V>> newRDD = rdd().select(JavaApiHelper.<NamedColumnRef>toScalaSeq(CassandraJavaUtil.convert(columnNames)));
+        CassandraRDD<Tuple2<K, V>> newRDD = rdd().select(JavaApiHelper.<SelectableColumnRef>toScalaSeq(CassandraJavaUtil.convert(columnNames)));
         return new CassandraJavaPairRDD<>(newRDD, kClassTag(), vClassTag());
     }
 
@@ -55,10 +56,10 @@ public class CassandraJavaPairRDD<K, V> extends JavaPairRDD<K, V> {
      * times, it selects the subset of the already selected columns, so after a column was removed by the previous
      * {@code select} call, it is not possible to add it back.</p>
      */
-    public CassandraJavaPairRDD<K, V> select(NamedColumnRef... selectionColumns) {
+    public CassandraJavaPairRDD<K, V> select(SelectableColumnRef... selectionColumns) {
         // explicit type argument is intentional and required here
         //noinspection RedundantTypeArguments
-        CassandraRDD<Tuple2<K, V>> newRDD = rdd().select(JavaApiHelper.<NamedColumnRef>toScalaSeq(selectionColumns));
+        CassandraRDD<Tuple2<K, V>> newRDD = rdd().select(JavaApiHelper.<SelectableColumnRef>toScalaSeq(selectionColumns));
         return new CassandraJavaPairRDD<>(newRDD, kClassTag(), vClassTag());
     }
 
@@ -80,7 +81,7 @@ public class CassandraJavaPairRDD<K, V> extends JavaPairRDD<K, V> {
     public String[] selectedColumnNames() {
         // explicit type cast is intentional and required here
         //noinspection RedundantCast
-        return (String[]) rdd().selectedColumnNames().<String>toArray(getClassTag(String.class));
+        return (String[]) rdd().selectedColumnRefs().<String>toArray(getClassTag(String.class));
     }
 
     /**
