@@ -5,11 +5,7 @@ import scala.language.implicitConversions
 /** Unambiguous reference to a column in the query result set row. */
 sealed trait ColumnRef
 
-sealed trait NamedColumnRef extends ColumnRef {
-  /** Returns the column name which this selection bases on. In case of a function, such as `ttl` or
-    * `writetime`, it returns the column name passed to that function. */
-  def columnName: String
-
+sealed trait SelectableColumnRef extends ColumnRef {
   /** Returns a CQL phrase which has to be passed to the `SELECT` clause with appropriate quotation
     * marks. */
   def cql: String
@@ -17,6 +13,12 @@ sealed trait NamedColumnRef extends ColumnRef {
   /** Returns a name of the selection as it is seen in the result set. Most likely this is going to be
     * used when providing custom column name to field name mapping. */
   def selectedAs: String
+}
+
+sealed trait NamedColumnRef extends SelectableColumnRef {
+  /** Returns the column name which this selection bases on. In case of a function, such as `ttl` or
+    * `writetime`, it returns the column name passed to that function. */
+  def columnName: String
 }
 
 object NamedColumnRef {
@@ -43,6 +45,11 @@ case class WriteTime(columnName: String) extends NamedColumnRef {
   val selectedAs = s"writetime($columnName)"
 
   override def toString: String = selectedAs
+}
+
+case object CountColumn extends SelectableColumnRef {
+  override def selectedAs: String = "count"
+  override def cql: String = "count(*)"
 }
 
 /** References a column by its index in the row. Useful for tuples. */
