@@ -5,6 +5,7 @@
  * Added support for write throughput limiting (SPARKC-57)
  * Added EmptyCassandraRDD (SPARKC-37)
  * Exposed authConf in CassandraConnector
+ * Overridden count() implementation in CassandraRDD which uses native Cassandra count (SPARKC-52)
 
 1.2.0 alpha 2
  * All connection properties can be set on SparkConf / CassandraConnectorConf objects and
